--- a/mind-match-project/package.json
+++ b/mind-match-project/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "leaflet": "^1.9.4",
     "opencage-api-client": "^1.0.7",
     "react": "^18.3.1",
