--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://i-club-co.github.io/Frontend/mind-match-project"
+  "homepage": "https://i-club-co.github.io/Frontend"
 }
