--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.7",
         "crypto-js": "^4.2.0",
+        "eslint-config-react-app": "^7.0.1",
         "leaflet": "^1.9.4",
         "opencage-api-client": "^1.0.7",
         "react": "^18.3.1",
