--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^6.3.0"
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@types/react-redux": "^7.1.34",
+        "@types/react-router-dom": "^5.3.3",
+        "gh-pages": "^6.3.0",
+        "typescript": "^5.7.3"
     }
 }
