--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.2.2",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@types/react-redux": "^7.1.34",
